# vibra

./: CMakeLists.txt  README.md  build.sh  metadata.json
contents/config/: main.xml
contents/docs/: external copy.txt  install.txt  vibra todos  vibra-install-guide.html
contents/ui/: FullView.qml  InfoTab.qml  SearchTab.qml  ServiceButton.qml  SettingsTab.qml  main.qml
plugin/: CMakeLists.txt  plugin.cpp  qmldir  vibrabackend.cpp  vibrabackend.h
